# hermes-userbot

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: bootstrap.py  client.py  main.py
app/agent/: decision.py  policy.py  router.py  schemas.py
app/api/: routes.py  schemas.py  server.py
app/config/: settings.py
app/domains/: common.py
app/plugins/: bot_interactions.py  commands.py  group_messages.py  lifecycle.py  private_messages.py
app/services/: audit_log.py  command_queue.py  rate_limiter.py  session_manager.py
app/tools/: bots.py  chats.py  history.py  messaging.py  safety.py
app/types/: common.py
app/utils/: errors.py  logging.py  time.py
scripts/: generate_session.py  run_dev.py
tests/: test_rate_limiter.py  test_settings.py  test_tools.py
