[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hermes-userbot"
version = "0.1.0"
description = "Hermes Userbot — automação responsável de conta suporte no Telegram via MTProto"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Gabriel Ramos" }]
dependencies = [
    "kurigram>=2.2.23",
    "tgcrypto>=1.2.5",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "structlog>=24.4",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["app", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "pyrogram.*"
ignore_missing_imports = true